--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           class="input"
           type="text"
           id="initial-price"
-          placeholder="Enter Initial Price Here"
+          placeholder="Enter Initial Price"
       /></label>
       <label class="input-label" for="stocks-quantity">
         Quantity of Stocks
@@ -31,7 +31,7 @@
           class="input"
           type="text"
           id="stocks-quantity"
-          placeholder="Enter the Number of Stocks bought"
+          placeholder="Enter the Number of Stocks"
         />
       </label>
       <label class="input-label" for="current-price"
@@ -40,15 +40,15 @@
           class="input"
           type="text"
           id="current-price"
-          placeholder="Enter the Current Price of the stocks"
+          placeholder="Enter the Current Price"
       /></label>
 
-      <button id="submit-btn" class="btn-check">Tell Me!!</button>
+      <button id="submit-btn" class="btn-check">Enter</button>
 
       <div id="output-box" class="output"></div>
     </main>
     <footer>
-      <p>2021 | Purushottam</p>
+      <p>2022 | Purushottam</p>
       <ul class="list-unordered inline-list">
         <li>
           <a class="links" href="https://github.com/purushottam05" target="_blank">
